# schnell

./: .gitignore  CMakeLists.txt  Makefile  README.md  cat.c  cat.h  cd.c  cd.h  cp.c  cp.h  diff.c  diff.h  env.c  env.h  grep.c  grep.h  ls.c  ls.h  makefile  mkdir.c  mkdir.h  mycommands.h  mykill.c  mykill.h  myshell.c  rmdir.c  rmdir.h  shell.c  sleep.c  sleep.h  stat.c  stat.h  subdir.mk  timeout.c  timeout.h  wait.c  wait.h
